Fix game-container graphical/layout issues
In order to keep the functionality that already exists on the desktop
version a conditional statement checks if the screen is large enough for
the game to be properly played(~600px).
- Moreover I found the best practice was avoid applying styles directly
  to the parent element when also using Phaser's Scale Manager

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -26,6 +26,7 @@ body  {
     display: none;
     #wrapper {
         display: flex;
+        margin:.1rem;
         .left {
             flex: 0 0 65%;
         }
@@ -96,6 +97,7 @@ header {
     #wrapper {
         display: flex;
         flex-direction: column;
+        margin:-1rem;
     }
 
 }
